[tool.poetry]
name = "atari-rl"
version = "0.1.0"
description = ""
authors = ["yue.zou <yue.zou@datatonic.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
menpo = "^0.11.1"
opencv-python = "^4.11.0.86"
h5py = "^3.12.1"
tensorflow = "^2.18.0"
numpy = "<2.1.0"
gymnasium = {extras = ["atari"], version = "^1.0.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
